# noreward-rl-enhanced

./: .flake8  README_MODERN.md  REFACTORING_SUMMARY.md  fix_linting.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/environments/: atari_hard.yaml  cartpole.yaml  doom.yaml  mario.yaml
configs/experiments/: curiosity_baseline.yaml  hard_exploration.yaml
doomFiles/: doom_env.py
logs/: events.out.tfevents.1758837273.sfs-wifi-dhcp-10-143-221-137.wifi.sfsu.edu.32849.0.v2
scripts/: benchmark_hard_exploration.py  eval_and_record.py  validate_configs.py
src/: a3c.py  a3c_modern.py  constants.py  demo.py  env_wrapper.py  envs.py  logger.py  model.py  model_modern.py  simple_demo.py  simple_train.py  simple_train_config.py  train_modern.py
tests/: test_basic.py  test_checkpointing.py  test_config.py  test_reproducibility.py
utils/: __init__.py  checkpoint.py  config.py  seed.py
wandb/latest-run/files/: config.yaml  wandb-metadata.json
wandb/run-20250925_140445-4h655qzt/: run-4h655qzt.wandb
wandb/run-20250925_140445-4h655qzt/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20250925_145431-8uowvcuu/: run-8uowvcuu.wandb
wandb/run-20250925_145431-8uowvcuu/files/: requirements.txt  wandb-summary.json
